--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/d4cenn/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/d4cenn/frontend-project-44/actions)",
+  "description": "[![Actions Status](https://github.com/d4cenn/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/d4cenn/frontend-project-44/actions)This is a description",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
