--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "brain-prime": "bin/brain-prime.js"
   },
   "dependencies": {
+    "node": "^18.10.0",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
